style.css
body {
    display: flex;
    flex-wrap: wrap;
}

header {
    width: 100%;
    height: 20vh;
    
    padding: 30px;
    text-align: center;
    font-size: 35px;
    color: white;
    background-image: url("baner.jpg");
    background-repeat: no-repeat;
    background-position: center;
}

header h1 {
    -webkit-text-stroke: 2px black;
}

.section {
    width: 100%;
    display: flex;
}

.renault-logo {
    margin-bottom: 5vh;
}

nav {
    display: flex;
    width: 15%;
    height: 100%;
    background: rgb(81, 138, 187);
    padding: 20px;
    flex-direction: column;
    justify-content: space-between;
}

nav ul {
    list-style-type: none;
    padding: 0;
    font-size: 20px;
}

nav ul li:hover {
    background-color: rgb(184, 217, 238);
}

.articles {
    display: flex;
    flex-wrap: wrap;
    width: 85%;
    background-color: rgb(184, 217, 238);
}

article {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    padding: 20px;
    width: 85%;
    background-color: rgb(184, 217, 238);
}

.article-item {
    margin-bottom: 20px;
    border: 1px solid black;
}

.article-header {
    display: flex;
    justify-content: space-between;
    padding-left: 10px;
    padding-right: 10px;
}

.article-button button {
    background-color: rgb(8, 92, 165);
    color: white;
}

.article-button {
    display: flex;
    justify-content: center;
}

.article-title {
    background-color: rgb(8, 92, 165);
    padding: 10px;
    font-size: 25px;
    color: white;
    border-radius: 10px;
    width: fit-content;
}

.article-title-container {
    width: 100%;
}

#menu {
    font-weight: bold;
}

@media (max-width: 300px) {
    nav, article {
        width: 100%;
        height: auto;
    }
}


.section::after {
    content: "";
    display: table;
    clear: both;
  }

  footer {
    background-color:rgb(8, 92, 165);
    padding: 10px;
    text-align: right;
    color: white;
    width: 100%;
}

